# lab8

./: .dockerignore  Dockerfile  build.sh  run_docker.sh
.github/: coverage.sh
.github/workflows/: coveralls.yml  docker-build.yml  lab5.yml
banking/: CMakeLists.txt  Transaction.cpp  Transaction.h  test_account.cpp  test_transaction.cpp
tests/: AccountTest.cpp  CMakeLists.txt
